WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281691
REGRESSION(
281282@main
): Web process crashes when opening PDF in Safari on macOS Recovery
https://bugs.webkit.org/show_bug.cgi?id=281691
Summary
REGRESSION(281282@main): Web process crashes when opening PDF in Safari on ma...
Abrar Rahman Protyasha
Reported
2024-10-17 14:21:10 PDT
rdar://138067010
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2024-10-17 16:38:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35388
EWS
Comment 2
2024-10-18 01:28:48 PDT
Committed
285385@main
(6bbee059a4bf): <
https://commits.webkit.org/285385@main
> Reviewed commits have been landed. Closing PR #35388 and removing active labels.
EWS
Comment 3
2024-10-21 15:32:33 PDT
Committed
283286.329@safari-7620-branch
(d95096c8cc36): <
https://commits.webkit.org/283286.329@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2078 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug